Update environment configuration example

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-LLAMA_MODEL_PATH=/models/llama.bin
-EMBEDDING_MODEL=text-embedding-model
+LLM_BG1_PATH=/models/bgpt-7b
+LLM_BG2_PATH=/models/gemma-2-bg
+EMBEDDING_MODEL_PATH=/models/all-MiniLM-L6-v2
 CHROMA_PERSIST_DIR=/chroma_db
-OCR_LANG=eng
+OCR_LANG=bul
+INSTALL_HEAVY=false
+LLM_PROVIDER=transformers
