--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,5 @@
 -r requirements.txt
-pytest==8.0.2
-ruff==0.2.1
-pre-commit==3.6.2
-httpx==0.26.0
+pytest>=8.0
+ruff>=0.5
+pre-commit>=3.5
+httpx>=0.26
