--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.109.2
 uvicorn[standard]==0.27.1
-pydantic==1.10.14
+pydantic>=2.6,<3
 PyPDF2==3.0.1
 python-docx==0.8.11
 langdetect==1.0.9
