--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,9 @@ services:
         INSTALL_HEAVY: "true"
     container_name: legal-bot-app
     runtime: nvidia
-    device_requests:
-      - driver: nvidia
-        count: 2
-        capabilities:
-          - gpu
+    environment:
+      - NVIDIA_VISIBLE_DEVICES=all
+      - NVIDIA_DRIVER_CAPABILITIES=compute,utility
     ports:
       - "8000:8000"
     env_file:
