Update dev compose app service

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,6 +3,7 @@ services:
   app:
     build:
       context: .
+      target: dev
       args:
         - INSTALL_HEAVY=false
     image: legal-bot-dev:latest
@@ -11,9 +12,12 @@ services:
       - "8000:8000"
     env_file:
       - .env
+    # Монтируем только src, чтобы не было конфликтов имен пакетов
     volumes:
-      - ./:/app
+      - ./src:/app/src
       - ./models:/models
       - ./chroma_db:/chroma_db
     environment:
+      - PYTHONPATH=/app/src
       - PYTHONUNBUFFERED=1
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000
