--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,5 @@ services:
       - .env
     volumes:
       - ./models:/models
-      - chroma_db:/chroma_db
+      - ./chroma_db:/chroma_db
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000
-
-volumes:
-  chroma_db:
