Add defaults for Chroma and Compose mounts

--- a/docker-compose.gpu.yml
+++ b/docker-compose.gpu.yml
@@ -7,3 +7,8 @@ services:
             - driver: nvidia
               count: all
               capabilities: [gpu]
+    device_requests:
+      - driver: nvidia
+        count: all
+        capabilities:
+          - gpu
