--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
+CHROMA_PERSIST_DIR=/chroma_db
+VECTOR_STORE=mock
+EMBEDDING_MODEL_PATH=/models/all-MiniLM-L6-v2
+EMBEDDING_DEVICE=cpu
+LLM_PROVIDER=transformers
 LLM_BG1_PATH=/models/bgpt-7b
 LLM_BG2_PATH=/models/gemma-2-bg
-EMBEDDING_MODEL_PATH=/models/all-MiniLM-L6-v2
-CHROMA_PERSIST_DIR=/chroma_db
 OCR_LANG=bul
 INSTALL_HEAVY=false
-LLM_PROVIDER=transformers
