--- a/docker-compose.gpu.yml
+++ b/docker-compose.gpu.yml
@@ -1,3 +1,5 @@
+version: "3.8"
+
 services:
   app:
     deploy:
@@ -6,7 +8,8 @@ services:
           devices:
             - driver: nvidia
               count: all
-              capabilities: [gpu]
+              capabilities:
+                - gpu
     device_requests:
       - driver: nvidia
         count: all
