--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -21,3 +21,8 @@ services:
       - PYTHONPATH=/app/src
       - PYTHONUNBUFFERED=1
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8000/healthz || exit 1"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
