Improve dependency pins and vector store resilience

--- a/docker-compose.gpu.local.yml
+++ b/docker-compose.gpu.local.yml
@@ -1,7 +1,7 @@
 services:
   app:
     extends:
-      file: docker-compose.yml
+      file: docker-compose.dev.yml
       service: app
     device_requests:
       - driver: nvidia
