Add transformers LLM provider and wire into RAG flow

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,17 @@ CHROMA_PERSIST_DIR=/chroma_db
 VECTOR_STORE=mock
 EMBEDDING_MODEL_PATH=/models/all-MiniLM-L6-v2
 EMBEDDING_DEVICE=cpu
+
+# LLM configuration
 LLM_PROVIDER=transformers
-LLM_BG1_PATH=/models/bgpt-7b
-LLM_BG2_PATH=/models/gemma-2-bg
+LLM_MODEL_PATH=/models/bgpt-7b
+# За алтернативна конфигурация Gemma 2 BG:
+# LLM_MODEL_PATH=/models/gemma-2-bg
+LLM_DEVICE_MAP=single
+LLM_TORCH_DTYPE=float16
+LLM_MAX_TOKENS=256
+LLM_TEMPERATURE=0.0
+LLM_STUB=false
+
 OCR_LANG=bul
-INSTALL_HEAVY=false
+INSTALL_HEAVY=true
