Add configurable LLM loading and heavy build profiles

--- a/.env.example
+++ b/.env.example
@@ -8,11 +8,14 @@ LLM_PROVIDER=transformers
 LLM_MODEL_PATH=/models/bgpt-7b
 # За алтернативна конфигурация Gemma 2 BG:
 # LLM_MODEL_PATH=/models/gemma-2-bg
+LLM_DEVICE=auto
 LLM_DEVICE_MAP=single
 LLM_TORCH_DTYPE=float16
+LLM_QUANT=
 LLM_MAX_TOKENS=256
 LLM_TEMPERATURE=0.0
 LLM_STUB=false
 
 OCR_LANG=bul
 INSTALL_HEAVY=true
+FORCE_LOAD_ON_START=false
