--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,10 @@ services:
   app:
     build:
       context: .
+      target: app
       args:
         INSTALL_HEAVY: ${INSTALL_HEAVY:-false}
     container_name: legal-bot-app
-    runtime: nvidia
     env_file:
       - .env
     ports:
@@ -16,6 +16,9 @@ services:
       - ./models:/models
       - ./chroma_db:/chroma_db
       - ./src:/app/src
+    environment:
+      INSTALL_HEAVY: ${INSTALL_HEAVY:-false}
+      FORCE_LOAD_ON_START: ${FORCE_LOAD_ON_START:-false}
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8000/healthz || exit 1"]
