Improve LLM loading reliability and docs

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,9 @@ EMBEDDING_DEVICE=cpu
 # LLM configuration
 LLM_PROVIDER=transformers
 LLM_MODEL_PATH=/models/bgpt-7b
-# За алтернативна конфигурация Gemma 2 BG:
-# LLM_MODEL_PATH=/models/gemma-2-bg
+# Допълнителни ключове за обратна съвместимост (ползва се първият наличен):
+# LLM_BG1_PATH=/models/bgpt-7b
+# LLM_BG2_PATH=/models/gemma-2-bg
 LLM_DEVICE=auto
 LLM_DEVICE_MAP=single
 LLM_TORCH_DTYPE=float16
@@ -18,4 +19,6 @@ LLM_STUB=false
 
 OCR_LANG=bul
 INSTALL_HEAVY=true
+# USE_CUDA=true ще накара Dockerfile да инсталира CUDA вариант на PyTorch
+USE_CUDA=false
 FORCE_LOAD_ON_START=false
