--- a/requirements.heavy.txt
+++ b/requirements.heavy.txt
@@ -1,11 +1,9 @@
---extra-index-url https://download.pytorch.org/whl/cu118
-
 chromadb==0.4.24
-sentence-transformers==2.2.2
-torch==2.2.2
-transformers==4.38.2
-accelerate==0.27.2
-# bitsandbytes==0.42.0  # uncomment when GPU with CUDA support is available
+sentence-transformers==3.0.1
+torch>=2.3.1,<2.4
+transformers==4.41.2
+accelerate==0.30.1
+# bitsandbytes==0.43.1  # uncomment when GPU with CUDA support is available
 PyPDF2==3.0.1
 python-docx==0.8.11
 pdfminer.six==20231228
