--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 numpy<2
-huggingface_hub==0.25.2
 fastapi==0.109.2
 uvicorn[standard]==0.27.1
 pydantic==1.10.14
 python-dotenv
 python-multipart
 langdetect==1.0.9
+huggingface_hub==0.23.4
+safetensors==0.4.3
