--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
       target: app
       args:
         INSTALL_HEAVY: ${INSTALL_HEAVY:-false}
+        # (опционально) если хочешь тащить CUDA-колёсики PyTorch на этапе сборки
+        USE_CUDA: ${USE_CUDA:-true}
     container_name: legal-bot-app
     env_file:
       - .env
@@ -17,6 +19,12 @@ services:
     environment:
       INSTALL_HEAVY: ${INSTALL_HEAVY:-false}
       FORCE_LOAD_ON_START: ${FORCE_LOAD_ON_START:-false}
+      # если хочешь эмбеддинги тоже на GPU:
+      EMBEDDING_DEVICE: ${EMBEDDING_DEVICE:-cuda}
+      # не обязательно, но полезно
+      NVIDIA_VISIBLE_DEVICES: all
+      NVIDIA_DRIVER_CAPABILITIES: compute,utility
+    gpus: all                        # ← ЭТО ГЛАВНОЕ
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8000/healthz || exit 1"]
