--- a/requirements.heavy.txt
+++ b/requirements.heavy.txt
@@ -3,6 +3,8 @@ sentence-transformers==3.0.1
 torch>=2.3.1,<2.4
 transformers==4.41.2
 accelerate==0.30.1
+safetensors==0.4.3
+einops==0.7.0
 # bitsandbytes==0.43.1  # uncomment when GPU with CUDA support is available
 PyPDF2==3.0.1
 python-docx==0.8.11
