--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ LLM_MODEL_PATH=/models/bgpt-7b
 # LLM_BG1_PATH=/models/bgpt-7b
 # LLM_BG2_PATH=/models/gemma-2-bg
 LLM_DEVICE=cuda
-LLM_DEVICE_MAP=auto
+LLM_DEVICE_MAP=single
 LLM_TORCH_DTYPE=auto
 LLM_QUANT=
 LLM_MAX_TOKENS=256
